Fixed text alignment bug

--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ body{
     position: relative;
     display: flex;
     justify-content: end;
+    text-align: right;
 }
 .keypad{
     display: grid;
